@@ -7,6 +7,8 @@ The package docbrowser has been analyzed with pylint.
 
 The package h5db has been analyzed with pylint.
 
+The package nodeprops has been analyzed with pylint.
+
 ** September 30, 2013 **
 The modules vtSite and vtGUI hav been renamed accordingly to PEP 8.
 
